implementato dealer hit